--- a/style.css
+++ b/style.css
@@ -14,15 +14,20 @@
     --roundedMd : 8px ;
     --roundedLg: 16px;
     --roundedXl: 24px;
+    --paddingPrimary: 15px 30px;
+    --whiteColor: #fff;
+    --blackColor: #0e0e0e;
 }
 
 .outlinedBtn {
     border: 1px solid var(--primaryColor);
-    padding: 15px 30px;
+    padding:var(--paddingPrimary) ;
     color: var(--primaryColor);
     background-color: white;
-    font-weight: 600;
     border-radius: var(--roundedMd) ;
+    outline: none;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 header   > nav{
@@ -30,11 +35,48 @@ header   > nav{
     align-items: center;
     justify-content: space-between;
     max-width: 1280px;
-    padding: 24px 160px;
+    padding: 24px 100px;
     margin: 0 auto;
 
 }
 
 .logo {
     font-size: 2rem;
+}
+
+.heroSection {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 80px 100px;
+    display: flex;
+    align-items: center;
+    gap: 16;
+}
+
+.heroContent {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+}
+
+.containedBtn {
+    width: fit-content;
+    background-color: var(--primaryColor);
+    padding: var(--paddingPrimary);
+    outline: none;
+    border: none;
+    border-radius: var(--roundedMd);
+    color: var(--whiteColor);
+    font-size: 18px;
+    font-weight: 600;
+}
+.heroTitle {
+    font-size: 3.5rem;
+}
+.subTitle {
+    color: var(--blackColor);
+    opacity: 0.5;
+    font-size: 24px;
+    font-weight: 500;
 }
