--- a/style.css
+++ b/style.css
@@ -102,6 +102,8 @@ header   > nav{
     max-width: 1280px;
     display: flex !important;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 32px;
     
 }
@@ -168,6 +170,9 @@ header   > nav{
 .align-center {
     align-items: center;
 }
+.text-center {
+    text-align: center;
+}
 .padding-32 {
     padding: 32px;
 }
@@ -180,16 +185,16 @@ header   > nav{
 
 
 .bg-softBlue {
-    background-color: rgba(84, 144, 245, 0.2);
+    background-color: rgba(84, 144, 245, 0.2) !important; 
 }
 .bg-softWhite {
-    background-color: rgb(247, 235, 207);
+    background-color: rgb(247, 235, 207) !important;
 }
 .bg-softGreen {
-    background-color: rgb(198, 228, 214);
+    background-color: rgb(198, 228, 214) !important; 
 }
 .bg-white {
-    background-color: var(--whiteColor);
+    background-color: var(--whiteColor) !important;
 }
 .rounded-xl {
     border-radius: var(--roundedXl);
@@ -224,4 +229,28 @@ header   > nav{
     object-fit: cover;
     height: auto;
     border-radius: var(--roundedXl);
+}
+
+.donateMoney {
+    padding: 40px;
+    border-radius: var(--roundedLg);
+    background-color: var(--whiteColor);
+    font-size: 40px;
+    font-weight: 700;
+    color: var(--blackColor);
+    opacity: 0.8;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+}
+
+.btnContainer {
+    padding: 20px 40px;
+    justify-content: center;
+    cursor: pointer;
+    width: 80%;
+}
+.btnContainer button {
+    font-size: 20px;
+    opacity: 0.3;
+    outline: none;
+    border: none;
 }
