--- a/style.css
+++ b/style.css
@@ -254,3 +254,17 @@ header   > nav{
     outline: none;
     border: none;
 }
+
+#newslater {
+    padding: 80px 100px;
+}
+.newslaterContainer {
+    width: 60%;
+}
+.inputField {
+    width: 100%;
+    outline: none;
+    border: none;
+    padding: 18px 40px;
+    border-radius: 8px 0px 0px 8px;
+}
