--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ header   > nav{
     align-items: center;
     justify-content: center;
     gap: 80px;
-    padding-bottom:100px ;
 }
 
 .container section {
@@ -267,4 +266,25 @@ header   > nav{
     border: none;
     padding: 18px 40px;
     border-radius: 8px 0px 0px 8px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+    padding: 50px 160px;
+    margin-top: 80px ;
+}
+footer > div{
+    max-width: 1280px;
+}
+
+footer > h2 {
+    font-size: 32px;
+    font-weight: 700;
+}
+footer i {
+    font-size: 24px;
 }
