--- a/style.css
+++ b/style.css
@@ -35,6 +35,15 @@ body {
     font-weight: 600;
 }
 
+.outlinedBtn:hover {
+    background-color: rgb(255, 194, 57);
+    transition: all 0.3s linear;
+    color: white;
+    border: none;
+}
+
+
+
 header   > nav{
     display: flex;
     align-items: center;
@@ -110,11 +119,7 @@ header   > nav{
     justify-content: center;
     align-items: center;
     gap: 32px;
-    
 }
- #pillersOfBd {
-    /* text-align: start; */
-} 
 
 .pillerContainer {
     display: flex;
@@ -129,6 +134,12 @@ header   > nav{
     display: flex;
     flex-direction: column;
     gap: 24px;
+    cursor: pointer;
+}
+
+.pillerContainer div:hover {
+    background-color: rgb(198, 228, 214) !important;
+    transition: all 0.3s ease;
 }
 
 .heading {
@@ -212,6 +223,14 @@ header   > nav{
     /* align-items: start; */
     background-color: var(--whiteColor);  
     border: 1px solid rgba(14, 14, 14, 0.15);
+    position: relative;
+}
+
+.quoteContainer {
+    position:  absolute;
+    top: 30px;
+    left: 25px;
+    opacity: 0.5;
 }
 
 
@@ -244,6 +263,11 @@ header   > nav{
     color: var(--blackColor);
     opacity: 0.8;
     border: 1px solid rgba(14, 14, 14, 0.15);
+    cursor: pointer;
+}
+
+.donateMoney:hover {
+    background-color:  rgb(198, 228, 214) !important ;
 }
 
 .btnContainer {
@@ -292,4 +316,8 @@ footer > h2 {
 }
 footer i {
     font-size: 24px;
+}
+input {
+    outline: none;
+    border: none;
 }
