--- a/style.css
+++ b/style.css
@@ -292,6 +292,7 @@ header   > nav{
 
 .donateMoney:hover {
     background-color:  rgb(198, 228, 214) !important ;
+    transition: all 0.3s ease;
 }
 
 .btnContainer {
